--- a/index.htm
+++ b/index.htm
@@ -139,6 +139,60 @@
             <div class="container content-container mx-auto px-4">
                 <h2 class="text-3xl md:text-4xl font-bold text-center mb-12 text-white">Professional Experience</h2>
                 <div class="space-y-16">
+                    <!-- GRIDSTRONG -->
+                    <div class="bg-white rounded-lg shadow-xl p-6 relative overflow-hidden">
+                        <div class="flex items-center mb-4">
+                            <div class="w-12 h-12 sm:w-16 sm:h-16 bg-gray-200 rounded-full mr-4 flex-shrink-0 flex items-center justify-center overflow-hidden">
+                                <img src="/images/gridstrong-logo.png" alt="GridStrong logo" class="object-contain">
+                            </div>
+                            <div>
+                                <h3 class="text-xl sm:text-2xl font-bold text-gray-800 mb-1">
+                                    <a href="https://www.gridstrong.ai" target="_blank" rel="noopener noreferrer" class="hover:underline">
+                                        GRIDSTRONG
+                                    </a>
+                                </h3>
+                                <h4 class="text-xl font-semibold text-gray-700">Co-Founder &amp; Director of Product Management</h4>
+                            </div>
+                        </div>
+                        <p class="text-gray-600 mb-4">2024 — Present | New York, NY (Remote)</p>
+                        <p class="text-gray-700 mb-4">
+                            Lead product at GridStrong.ai, a SaaS company transforming how the energy industry manages regulatory
+                            compliance and grid reliability. Oversee the full product lifecycle—from ideation through launch—while guiding
+                            engineering and design toward a unified roadmap. Focused on building scalable, intuitive tools that simplify
+                            complex compliance workflows for utilities and power producers.
+                        </p>
+                        <ul class="list-disc list-inside text-gray-700 space-y-2 mb-4">
+                            <li><strong>Leadership:</strong> Partner with leadership to translate business goals and compliance requirements
+                                into actionable product plans, shaping the company’s vision and delivery process.</li>
+                            <li><strong>Process & Delivery:</strong> Established cross-company processes for roadmap planning, sprint
+                                management, QA gating, and release tracking to ensure consistent execution across teams.</li>
+                            <li><strong>Platform Development:</strong> Drove the creation of GridStrong’s core workflows, including model
+                                quality testing, event analysis, and task automation tools connecting compliance to operational data.</li>
+                            <li><strong>Collaboration:</strong> Work closely with engineers, SMEs, and design to ship high-impact features
+                                serving both regulatory and commercial needs.</li>
+                            <li><strong>Funding & Growth:</strong> Contributed to company milestones, including a <strong>$1.4M U.S. DOE
+                                    grant</strong> and <strong>$10M Series A funding</strong> led by <strong>Congruent Ventures</strong>
+                                with support from <strong>Energize Capital</strong> and <strong>ENGIE North America</strong>.</li>
+                        </ul>
+                        <div class="grid grid-cols-2 md:grid-cols-4 gap-4 mt-4">
+                            <img src="https://middleton.io/images/gridstrong-dashboard.png" alt="GridStrong Dashboard"
+                                class="rounded-md cursor-pointer object-cover w-full h-48 lightbox-trigger">
+                            <img src="https://middleton.io/images/gridstrong-task-dashboard.png" alt="GridStrong Task Dashboard"
+                                class="rounded-md cursor-pointer object-cover w-full h-48 lightbox-trigger">
+                            <img src="https://middleton.io/images/gridstrong-event-analysis.png" alt="GridStrong Event Analysis"
+                                class="rounded-md cursor-pointer object-cover w-full h-48 lightbox-trigger">
+                            <img src="https://middleton.io/images/gridstrong-mqt-workflow.png" alt="GridStrong MQT Workflow"
+                                class="rounded-md cursor-pointer object-cover w-full h-48 lightbox-trigger">
+                        </div>
+                        <div class="skills-container flex flex-wrap gap-2 mt-4">
+                            <span class="bg-gray-200 text-sm text-gray-700 py-1 px-3 rounded-full">Product Leadership</span>
+                            <span class="bg-gray-200 text-sm text-gray-700 py-1 px-3 rounded-full">Process Design</span>
+                            <span class="bg-gray-200 text-sm text-gray-700 py-1 px-3 rounded-full">Cross-Functional Collaboration</span>
+                            <span class="bg-gray-200 text-sm text-gray-700 py-1 px-3 rounded-full">SaaS</span>
+                            <span class="bg-gray-200 text-sm text-gray-700 py-1 px-3 rounded-full">Energy Compliance</span>
+                            <span class="bg-gray-200 text-sm text-gray-700 py-1 px-3 rounded-full">Roadmapping</span>
+                        </div>
+                    </div>
                     <!-- HVAC.COM -->
                     <div class="bg-white rounded-lg shadow-xl p-6 relative overflow-hidden">
                         <div class="flex items-center mb-4">
