--- a/index.htm
+++ b/index.htm
@@ -147,7 +147,7 @@
                             </div>
                             <div>
                                 <h3 class="text-xl sm:text-2xl font-bold text-gray-800 mb-1">
-                                    <a href="https://www.gridstrong.ai" target="_blank" rel="noopener noreferrer" class="hover:underline">
+                                    <a href="https://www.gridstrong.ai" title="Visit GridStrong website" target="_blank" rel="noopener noreferrer" class="hover:underline">
                                         GRIDSTRONG
                                     </a>
                                 </h3>
@@ -203,48 +203,26 @@
                             </div>
                             <div>
                                 <h3 class="text-xl sm:text-2xl font-bold text-gray-800 mb-1">
-                                    <a href="https://www.hvac.com" target="_blank" rel="noopener noreferrer"
+                                    <a href="https://www.hvac.com" title="Visit HVAC.com website" target="_blank" rel="noopener noreferrer"
                                         class="hover:underline">
                                         HVAC.COM
                                     </a>
-                                    <span class="text-sm font-normal text-gray-600 ml-2">(Acquired by Trane Technologies
-                                        May 2024)</span>
+                                    <span class="text-sm font-normal text-gray-600 ml-2">(Acquired by <a href="https://www.tranetechnologies.com" title="Visit Trane Technologies website" target="_blank" rel="noopener noreferrer" class="hover:underline text-gray-600">Trane Technologies</a> May 2024)</span>
                                 </h3>
                                 <h4 class="text-xl font-semibold text-gray-700">Senior Product Manager, Growth</h4>
                             </div>
                         </div>
                         <p class="text-gray-600 mb-4">2024 — Present | New York, NY</p>
-                        <p class="text-gray-700 mb-4">Oversee all HVAC.com features, user experiences, and operations,
-                            delivering measurable value for homeowners and internal teams on a platform with <strong>~2M
-                                annual visits</strong>.
-                            Key accomplishments include:
-                        </p>
-                        <ul class="list-disc list-inside text-gray-700 space-y-2 mb-4">
-                            <li><span class="font-semibold">Leadership:</span> Manage the entire site funnel, from blogs
-                                and landing pages to
-                                lead generation and sales handoff, for a high-traffic platform. Collaborate with
-                                marketing, SEO, sales operations,
-                                design, project management, and engineering to drive conversions and user engagement
-                                while building <strong>0-to-1
-                                    lead generation tools</strong>.
-                            </li>
-                            <li><span class="font-semibold">Growth Drivers:</span> Delivered calculators (<strong>7.3%
-                                    conversion rate</strong>),
-                                QuoteScore (<strong>6%</strong>), video content (<strong>3.4%</strong>), and optimized
-                                landing pages (<strong>2.3%</strong>)
-                                through targeted <strong>A/B testing</strong>, improving conversions from a baseline of
-                                <strong>0.1%</strong>.
-                            </li>
-                            <li><span class="font-semibold">Expansion:</span> Introduced HVAC repair services,
-                                calculators, and a revamped blog,
-                                increasing site depth, user engagement, and overall platform performance.
-                            </li>
-                            <li><span class="font-semibold">Strategic Impact:</span> Leveraged testing insights, data
-                                analysis, and session-to-install
-                                metrics to guide site improvements and inform <strong>Trane’s broader brand
-                                    strategies</strong>.
-                            </li>
-                        </ul>
+                        <p class="text-gray-700 mb-4">
+Led product strategy, UX, and growth for <strong>HVAC.com</strong>, a homeowner platform with <strong>~2M annual visits</strong>, connecting consumers to trusted HVAC dealers nationwide. Owned the full digital funnel, from awareness and engagement to lead generation and dealer handoff, driving measurable conversion gains and shaping Trane’s broader digital strategy.
+</p>
+<ul class="list-disc list-inside text-gray-700 space-y-2 mb-4">
+    <li><strong>Conversion Growth:</strong> Improved site conversion through continuous <strong>A/B testing</strong> and the launch of high-performing tools—<strong>calculators (7.3%)</strong>, <strong>QuoteScore (6%)</strong>, <strong>video content (3.4%)</strong>, and <strong>optimized landing pages (2.3%)</strong>—each driving significant lifts over the <strong>0.1% baseline conversion rate</strong>.</li>
+    <li><strong>Platform Expansion:</strong> Introduced <strong>HVAC repair services</strong>, <strong>interactive calculators</strong>, and a <strong>redesigned blog</strong>, increasing site depth, engagement, and lead volume.</li>
+    <li><strong>Strategic Impact:</strong> Leveraged behavioral insights and funnel analytics to inform <strong>Trane Technologies’ lead generation playbook</strong>, scaling proven HVAC.com strategies across branded properties.</li>
+    <li><strong>Cross-Functional Leadership:</strong> Partnered with <strong>engineering, SEO, marketing, design, and sales ops</strong> to align the roadmap, accelerate delivery, and drive measurable business results.</li>
+    <li><strong>Data-Driven Execution:</strong> Combined analytics, experimentation, and user feedback to continuously refine the customer journey and optimize ROI across digital channels.</li>
+</ul>
                         <div class="grid grid-cols-2 md:grid-cols-4 gap-4 mt-4">
                             <img src="/images/hvac-calculators.png"
                                 alt="HVAC.COM Calculators"
@@ -282,7 +260,7 @@
                             </div>
                             <div>
                                 <h3 class="text-xl sm:text-2xl font-bold text-gray-800 mb-1">
-                                    <a href="https://hurd.ai" target="_blank" rel="noopener noreferrer"
+                                    <a href="https://hurd.ai" title="Visit Hurd AI website" target="_blank" rel="noopener noreferrer"
                                         class="hover:underline">
                                         HURD AI
                                     </a>
@@ -350,7 +328,7 @@
                             </div>
                             <div>
                                 <h3 class="text-xl sm:text-2xl font-bold text-gray-800 mb-1">
-                                    <a href="https://www.lever.co" target="_blank" rel="noopener noreferrer"
+                                    <a href="https://www.lever.co" title="Visit Lever website" target="_blank" rel="noopener noreferrer"
                                         class="hover:underline">
                                         LEVER
                                     </a>
@@ -417,7 +395,7 @@
                             </div>
                             <div>
                                 <h3 class="text-xl sm:text-2xl font-bold text-gray-800 mb-1">
-                                    <a href="https://www.sendoso.com" target="_blank" rel="noopener noreferrer"
+                                    <a href="https://www.sendoso.com" title="Visit Sendoso website" target="_blank" rel="noopener noreferrer"
                                         class="hover:underline">
                                         SENDOSO
                                     </a>
@@ -499,7 +477,7 @@
                             </div>
                             <div>
                                 <h3 class="text-xl sm:text-2xl font-bold text-gray-800 mb-1">
-                                    <a href="https://www.rocketlawyer.com" target="_blank" rel="noopener noreferrer"
+                                    <a href="https://www.rocketlawyer.com" title="Visit Rocket Lawyer website" target="_blank" rel="noopener noreferrer"
                                         class="hover:underline">
                                         ROCKET LAWYER
                                     </a>
@@ -573,7 +551,7 @@
                             </div>
                             <div>
                                 <h3 class="text-xl sm:text-2xl font-bold text-gray-800 mb-1">
-                                    <a href="https://www.oracle.com" target="_blank" rel="noopener noreferrer"
+                                    <a href="https://www.oracle.com" title="Visit Oracle website" target="_blank" rel="noopener noreferrer"
                                         class="hover:underline">
                                         ORACLE
                                     </a>
