--- a/index.htm
+++ b/index.htm
@@ -154,26 +154,17 @@
                                 <h4 class="text-xl font-semibold text-gray-700">Co-Founder &amp; Director of Product Management</h4>
                             </div>
                         </div>
-                        <p class="text-gray-600 mb-4">2024 — Present | New York, NY (Remote)</p>
+                        <p class="text-gray-600 mb-4">2024 — 2025 | New York, NY (Remote)</p>
                         <p class="text-gray-700 mb-4">
-                            Lead product at GridStrong.ai, a SaaS company transforming how the energy industry manages regulatory
-                            compliance and grid reliability. Oversee the full product lifecycle—from ideation through launch—while guiding
-                            engineering and design toward a unified roadmap. Focused on building scalable, intuitive tools that simplify
-                            complex compliance workflows for utilities and power producers.
-                        </p>
-                        <ul class="list-disc list-inside text-gray-700 space-y-2 mb-4">
-                            <li><strong>Leadership:</strong> Partner with leadership to translate business goals and compliance requirements
-                                into actionable product plans, shaping the company’s vision and delivery process.</li>
-                            <li><strong>Process & Delivery:</strong> Established cross-company processes for roadmap planning, sprint
-                                management, QA gating, and release tracking to ensure consistent execution across teams.</li>
-                            <li><strong>Platform Development:</strong> Drove the creation of GridStrong’s core workflows, including model
-                                quality testing, event analysis, and task automation tools connecting compliance to operational data.</li>
-                            <li><strong>Collaboration:</strong> Work closely with engineers, SMEs, and design to ship high-impact features
-                                serving both regulatory and commercial needs.</li>
-                            <li><strong>Funding & Growth:</strong> Contributed to company milestones, including a <strong>$1.4M U.S. DOE
-                                    grant</strong> and <strong>$10M Series A funding</strong> led by <strong>Congruent Ventures</strong>
-                                with support from <strong>Energize Capital</strong> and <strong>ENGIE North America</strong>.</li>
-                        </ul>
+Began working with <strong>GridStrong.ai</strong> in <strong>September 2024</strong> as a <strong>Product Advisor</strong>, helping shape early prototypes and secure a <strong>$1.4M U.S. Department of Energy grant</strong> that laid the groundwork for the company’s growth. After the Series A raise, joined full-time as <strong>Co-Founder &amp; Director of Product Management</strong>, leading product strategy, engineering, and design across the company’s SaaS platform for energy-industry compliance and grid reliability.
+</p>
+<ul class="list-disc list-inside text-gray-700 space-y-2 mb-4">
+  <li><strong>Leadership:</strong> Partner with leadership to translate business goals and compliance requirements into actionable product plans, shaping the company’s vision and delivery process.</li>
+  <li><strong>Process &amp; Delivery:</strong> Established cross-company processes for roadmap planning, sprint management, QA gating, and release tracking to ensure consistent execution across teams.</li>
+  <li><strong>Platform Development:</strong> Drive creation of GridStrong’s core workflows, including model quality testing, event analysis, and task automation tools connecting compliance to operational data.</li>
+  <li><strong>Collaboration:</strong> Work closely with engineers, SMEs, and design to ship reliable, high-impact features serving both regulatory and commercial needs.</li>
+  <li><strong>Funding &amp; Growth:</strong> Contributed to company milestones, including the <strong>$1.4M DOE grant</strong> and <strong>$10M Series A funding</strong> led by <strong>Congruent Ventures</strong> with support from <strong>Energize Capital</strong> and <strong>ENGIE North America</strong>.</li>
+</ul>
                         <div class="grid grid-cols-2 md:grid-cols-4 gap-4 mt-4">
                             <img src="https://middleton.io/images/gridstrong-dashboard.png" alt="GridStrong Dashboard"
                                 class="rounded-md cursor-pointer object-cover w-full h-48 lightbox-trigger">
@@ -212,7 +203,7 @@
                                 <h4 class="text-xl font-semibold text-gray-700">Senior Product Manager, Growth</h4>
                             </div>
                         </div>
-                        <p class="text-gray-600 mb-4">2024 — Present | New York, NY</p>
+                        <p class="text-gray-600 mb-4">2024 — 2025 | New York, NY</p>
                         <p class="text-gray-700 mb-4">
 Led product strategy, UX, and growth for <strong>HVAC.com</strong>, a homeowner platform with <strong>~2M annual visits</strong>, connecting consumers to trusted HVAC dealers nationwide. Owned the full digital funnel, from awareness and engagement to lead generation and dealer handoff, driving measurable conversion gains and shaping Trane’s broader digital strategy.
 </p>
@@ -265,7 +256,7 @@ Led product strategy, UX, and growth for <strong>HVAC.com</strong>, a homeowner 
                                         HURD AI
                                     </a>
                                 </h3>
-                                <h4 class="text-xl font-semibold text-gray-700">Co-founder &amp; Product Advisor</h4>
+                                <h4 class="text-xl font-semibold text-gray-700">Co-Founder &amp; Product Advisor</h4>
                             </div>
                         </div>
                         <p class="text-gray-600 mb-4">2023 | Berkeley, CA</p>
