--- a/index.htm
+++ b/index.htm
@@ -154,7 +154,7 @@
                                 <h4 class="text-xl font-semibold text-gray-700">Co-Founder &amp; Director of Product Management</h4>
                             </div>
                         </div>
-                        <p class="text-gray-600 mb-4">2024 — 2025 | New York, NY (Remote)</p>
+                        <p class="text-gray-600 mb-4">2024 — Present | New York, NY (Remote)</p>
                         <p class="text-gray-700 mb-4">
 Began working with <strong>GridStrong.ai</strong> in <strong>September 2024</strong> as a <strong>Product Advisor</strong>, helping shape early prototypes and secure a <strong>$1.4M U.S. Department of Energy grant</strong> that laid the groundwork for the company’s growth. After the Series A raise, joined full-time as <strong>Co-Founder &amp; Director of Product Management</strong>, leading product strategy, engineering, and design across the company’s SaaS platform for energy-industry compliance and grid reliability.
 </p>
