--- a/index.htm
+++ b/index.htm
@@ -138,7 +138,7 @@
 
                         <!-- Full Stack PM Callout Block -->
                         <div class="fullstack-callout callout-enhanced">
-                            <h4>What I Mean by “Full Stack PM”</h4>
+                            <h4>What&nbsp;I&nbsp;Mean&nbsp;by&nbsp;“Full&nbsp;Stack&nbsp;PM”</h4>
                             <p>
                                 I work across people, process, and product. I’m hands-on at every level: running
                                 meetings, cleaning up details, digging into data, or building a quick prototype. I turn
