--- a/index.htm
+++ b/index.htm
@@ -118,11 +118,13 @@
                     <div class="about-images">
                         <img src="https://middleton.io/images/profile-picture.jpg" alt="Kevin Middleton"
                             class="profile-img main-photo">
-                        <div class="about-photos-grid">
+                        <div class="about-photos-grid lightbox-group">
                             <img src="https://middleton.io/images/cat-illustration.png"
                                 alt="Kevin with cat - illustration" class="profile-img secondary-photo">
+
                             <img src="https://middleton.io/images/cats-photo.jpg" alt="Kevin's cats on cat tree"
                                 class="profile-img secondary-photo tall-photo">
+
                             <img src="https://middleton.io/images/carne-asada-fries-homemade.jpg"
                                 alt="Carne asada fries homemade" class="profile-img secondary-photo">
                         </div>
@@ -979,7 +981,8 @@
                             <div class="card glass-card skill-card full-width tint-silver">
                                 <div class="skill-header">
                                     <div class="skill-icon-wrap">
-                                        <svg class="skill-tools-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                        <svg class="skill-tools-icon" xmlns="http://www.w3.org/2000/svg" fill="none"
+                                            viewBox="0 0 24 24" stroke="currentColor">
                                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                                 d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.066-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z" />
                                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
