--- a/OG.html
+++ b/OG.html
@@ -77,9 +77,9 @@
   </div>
 
   <div class="name">Kevin Middleton</div>
-  <div class="subtitle">Full Stack Product Manager</div>
+  <div class="subtitle">Full‑Stack Product Manager · New York, NY</div>
 
-  <div class="tagline">Making complex work feel simple.</div>
+  <div class="tagline">I make complex work feel simple.</div>
 
 <script>
   function downloadOG(){
