--- a/rocketlawyer/index.htm
+++ b/rocketlawyer/index.htm
@@ -57,13 +57,13 @@
     <nav class="cs-toc cs-toc-top">
         <div class="cs-toc-grid">
             <a href="#introduction" class="cs-toc-item" data-section="introduction">Introduction</a>
-            <a href="#challenge" class="cs-toc-item" data-section="challenge">Challenge</a>
+            <a href="#problem" class="cs-toc-item" data-section="problem">Problem</a>
             <a href="#strategy" class="cs-toc-item" data-section="strategy">Strategy &amp; Solution</a>
             <a href="#platform" class="cs-toc-item" data-section="platform">Platform Capabilities</a>
             <a href="#walkthrough" class="cs-toc-item" data-section="walkthrough">Product Walkthrough</a>
             <a href="#execution" class="cs-toc-item" data-section="execution">Execution &amp; Decisions</a>
             <a href="#outcomes" class="cs-toc-item" data-section="outcomes">Outcomes</a>
-            <a href="#tradeoffs" class="cs-toc-item" data-section="tradeoffs">Tradeoffs</a>
+            <a href="#challenges" class="cs-toc-item" data-section="challenges">Challenges</a>
             <a href="#lessons" class="cs-toc-item" data-section="lessons">Lessons Learned</a>
             <a href="#testimonials" class="cs-toc-item" data-section="testimonials">Testimonials</a>
         </div>
@@ -75,13 +75,13 @@
             <nav class="cs-toc cs-toc--floating">
                 <div class="cs-toc-grid">
                     <a href="#introduction" class="cs-toc-item" data-section="introduction">Introduction</a>
-                    <a href="#challenge" class="cs-toc-item" data-section="challenge">Challenge</a>
+                    <a href="#problem" class="cs-toc-item" data-section="problem">Problem</a>
                     <a href="#strategy" class="cs-toc-item" data-section="strategy">Strategy &amp; Solution</a>
                     <a href="#platform" class="cs-toc-item" data-section="platform">Platform Capabilities</a>
                     <a href="#walkthrough" class="cs-toc-item" data-section="walkthrough">Product Walkthrough</a>
                     <a href="#execution" class="cs-toc-item" data-section="execution">Execution &amp; Decisions</a>
                     <a href="#outcomes" class="cs-toc-item" data-section="outcomes">Outcomes</a>
-                    <a href="#tradeoffs" class="cs-toc-item" data-section="tradeoffs">Tradeoffs</a>
+                    <a href="#challenges" class="cs-toc-item" data-section="challenges">Challenges</a>
                     <a href="#lessons" class="cs-toc-item" data-section="lessons">Lessons Learned</a>
                     <a href="#testimonials" class="cs-toc-item" data-section="testimonials">Testimonials</a>
                 </div>
@@ -93,7 +93,7 @@
     <div class="section cs-section" id="introduction">
         <div class="container cs-section-body">
             <div class="cs-section-header">
-                <h2 class="value-title iconized">🎯 Introduction</h2>
+                <h2 class="value-title iconized">🚀 Introduction</h2>
                 <p class="cs-section-eyebrow">Context & mission</p>
                 <p class="cs-section-intro">Rocket Lawyer was entering a new phase: expanding beyond direct-to-consumer
                     and proving an enterprise distribution model across Europe. Covéa, an insurer with 11.5M customers,
@@ -126,10 +126,10 @@
     </div>
 
     <!-- USERS & PROBLEM -->
-    <div class="section cs-section" id="challenge">
+    <div class="section cs-section" id="problem">
         <div class="container cs-section-body">
             <div class="cs-section-header">
-                <h2 class="value-title iconized">👥 The Challenge</h2>
+                <h2 class="value-title iconized">🎯 The Problem</h2>
                 <p class="cs-section-eyebrow">Who we were serving and what they needed</p>
                 <p class="cs-section-intro">We were building for customers who would enter Rocket Lawyer through Covéa's
                     ecosystem. The experience needed to feel native, secure, trustworthy, and co-branded while still
@@ -607,10 +607,10 @@
     </div>
 
     <!-- CHALLENGES -->
-    <div class="section cs-section" id="tradeoffs">
+    <div class="section cs-section" id="challenges">
         <div class="container cs-section-body">
             <div class="cs-section-header">
-                <h2 class="value-title iconized">⚖️ Tradeoffs</h2>
+                <h2 class="value-title iconized">🚧 Challenges</h2>
                 <p class="cs-section-eyebrow">Where the work was hardest</p>
                 <p class="cs-section-intro">Every phase forced hard choices. Here's how the project evolved and what we
                     navigated along the way.</p>
