--- a/rocketlawyer/index.htm
+++ b/rocketlawyer/index.htm
@@ -90,7 +90,7 @@
     </div>
 
     <!-- INTRO + MISSION -->
-    <div class="section cs-section" id="introduction">
+    <div class="section cs-section cs-section--blue" id="introduction">
         <div class="container cs-section-body">
             <div class="cs-section-header">
                 <h2 class="value-title iconized">🚀 Introduction</h2>
@@ -126,7 +126,7 @@
     </div>
 
     <!-- USERS & PROBLEM -->
-    <div class="section cs-section" id="problem">
+    <div class="section cs-section cs-section--blue-purple" id="problem">
         <div class="container cs-section-body">
             <div class="cs-section-header">
                 <h2 class="value-title iconized">🎯 The Problem</h2>
@@ -160,7 +160,7 @@
     </div>
 
     <!-- STRATEGY & SOLUTION -->
-    <div class="section cs-section" id="strategy">
+    <div class="section cs-section cs-section--rainbow cs-section--strong-cards" id="strategy">
         <div class="container cs-section-body">
             <div class="cs-section-header">
                 <h2 class="value-title iconized">🧠 Strategy & Solution</h2>
@@ -193,7 +193,7 @@
     </div>
 
     <!-- ARCHITECTURE & CAPABILITIES -->
-    <div class="section cs-section" id="platform">
+    <div class="section cs-section cs-section--rainbow cs-section--strong-cards" id="platform">
         <div class="container cs-section-body">
             <div class="cs-section-header">
                 <h2 class="value-title iconized">⚙️ Platform Capabilities</h2>
@@ -517,7 +517,7 @@
     </div>
 
     <!-- EXECUTION & DECISIONS -->
-    <div class="section cs-section" id="execution">
+    <div class="section cs-section cs-section--purple cs-section--strong-cards" id="execution">
         <div class="container cs-section-body">
             <div class="cs-section-header">
                 <h2 class="value-title iconized">🤝 Execution & Key Decisions</h2>
@@ -555,7 +555,7 @@
     </div>
 
     <!-- OUTCOMES -->
-    <div class="section cs-section" id="outcomes">
+    <div class="section cs-section cs-section--mint cs-section--strong-cards" id="outcomes">
         <div class="container cs-section-body">
             <div class="cs-section-header">
                 <h2 class="value-title iconized">📈 Outcomes</h2>
@@ -593,7 +593,7 @@
     </div>
 
     <!-- CHALLENGES -->
-    <div class="section cs-section" id="challenges">
+    <div class="section cs-section cs-section--peach cs-section--strong-cards" id="challenges">
         <div class="container cs-section-body">
             <div class="cs-section-header">
                 <h2 class="value-title iconized">🚧 Challenges</h2>
@@ -674,7 +674,7 @@
     </div>
 
     <!-- LESSONS LEARNED -->
-    <div class="section cs-section" id="lessons">
+    <div class="section cs-section cs-section--yellow cs-section--strong-cards cs-cards--square" id="lessons">
         <div class="container cs-section-body">
             <div class="cs-section-header">
                 <h2 class="value-title iconized">💡 Lessons Learned</h2>
@@ -710,7 +710,7 @@
     </div>
 
     <!-- TESTIMONIALS -->
-    <div class="section cs-section" id="testimonials">
+    <div class="section cs-section cs-section--mint" id="testimonials">
         <div class="container cs-section-body">
             <div class="cs-section-header">
                 <h2 class="value-title iconized">💬 What People Said</h2>
