--- a/rocketlawyer/index.htm
+++ b/rocketlawyer/index.htm
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rocket Lawyer Case Study</title>
     <link rel="stylesheet" href="../styles.css">
-    <link rel="stylesheet" href="case-study.css">
+    <link rel="stylesheet" href="../case-study.css">
 </head>
 
 <body class="case-study">
